# stackage-snapshots

./: .gitignore  LICENSE  README.md  cabal.project  stack.yaml
.github/workflows/: chart.yml
html/: index.html
lts/0/: 0.yaml  1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml
lts/1/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  2.yaml  4.yaml  5.yaml  7.yaml  8.yaml  9.yaml
lts/10/: 0.yaml  1.yaml  10.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml
lts/11/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml
lts/12/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  23.yaml  24.yaml  25.yaml  26.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml
lts/13/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  23.yaml  24.yaml  25.yaml  26.yaml  27.yaml  28.yaml  29.yaml  3.yaml  30.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml
lts/14/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  23.yaml  25.yaml  26.yaml  27.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  9.yaml
lts/15/: 0.yaml  1.yaml  (+15 more)
stackage-history-chart/: stackage-history-chart.cabal
stackage-history-chart/src/: Main.hs
(+3650 files in other folders)
